# VSLAM-fundamentals-and-VIO-learning

./: .gitignore  README.md
L1/hw1/: hw1.md
L1/hw1/ORB_SLAM2/: CMakeLists.txt  build.sh
L1/hw1/ORB_SLAM2/Examples/Monocular/: mono_euroc.cc  mono_kitti.cc  mono_tum.cc
L1/hw1/ORB_SLAM2/Examples/RGB-D/: rgbd_tum.cc
L1/hw1/ORB_SLAM2/Examples/ROS/ORB_SLAM2/: CMakeLists.txt
L1/hw1/ORB_SLAM2/Examples/Stereo/: stereo_euroc.cc  stereo_kitti.cc
L1/hw1/ORB_SLAM2/Examples/Test/: myslam  myslam.cpp  myvideo  myvideo.cpp
L1/hw1/ORB_SLAM2/include/: LocalMapping.h  PnPsolver.h  Sim3Solver.h
L1/hw1/learn_cmake/: CMakeLists.txt
L1/hw1/learn_cmake/cmake_modules/: FindHello.cmake
L1/hw1/learn_cmake/release/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
L1/hw1/learn_cmake/src/: hello.cc
L1/hw1/use_google_tk/: CMakeLists.txt
L1/hw1/use_google_tk/cmake_modules/: FindHello.cmake
L1/hw1/use_google_tk/include/: hello.h
L1/hw1/use_google_tk/src/: hello.cc  useHello.cc
L10/: hw10.md
L10/hw10/: hw10.md
L10/rotation_update/: CMakeLists.txt  main.cpp
L11/course2_hw_new/vio_data_simulation/main/: gener_alldata.cpp
L11/course2_hw_new/vio_data_simulation/src/: imu.cpp  param.h
L11/hw11/: hw11.md
L12/CurveFitting_LM/app/: CurveFitting.cpp
L12/CurveFitting_LM/backend/: problem.cc
L12/CurveFitting_LM/viewer/: plot_lambda.py
L12/hw12/: hw12.md
L13/course4/nullspace_test/: hessian_nullspace_test.cpp
L13/hw13/: hw13.md
L14/hw14/: hw14.md
L14/hw_course5_new/app/: CurveFitting.cpp  TestMonoBA.cpp
L14/hw_course5_new/backend/: backend.h  edge.cc  edge.h  edge_imu.cc  edge_imu.h  edge_prior.cpp  edge_prior.h  edge_reprojection.cc  edge_reprojection.h  eigen_types.h  imu_integration.h  problem.cc  problem.h  vertex.cc  vertex.h  vertex_inverse_depth.h  vertex_motion.h  vertex_point_xyz.h  vertex_pose.cc  vertex_pose.h
L14/hw_course5_new/frontend/: camera.h  feature.h
L15/course6_hw/: triangulate.cpp
L15/course6_hw/plot/: plot_sigma1.py  plot_sigma2.py
L15/hw15/: hw15.md
L16/VINS-Course/config/: sim_config.yaml
L16/VINS-Course/data/: cam_pose.txt  cam_pose_0.txt  cam_pose_1.txt  cam_pose_2.txt  imu_pose_noise.txt  imu_pose_noise_1.txt  imu_pose_noise_2.txt
L16/VINS-Course/src/: System.cpp
L16/VINS-Course/src/camera_models/calib/: CameraCalibration.cc
L16/VINS-Course/src/camera_models/chessboard/: Chessboard.cc
L16/VINS-Course/test/: run_euroc.cpp  run_sim.cpp
L16/hw16/: hw16.md
L17/hw17/: hw17.md
L18-vio-project/Project BASolver/: README.md  手写 rootBA 求解器.md
L18-vio-project/Project BASolver/rootBA/: CMakeLists.txt
L18-vio-project/Project BASolver/rootBA/include/: camera_observe.hpp  ceres_basolver.hpp  frame.hpp  kernel_function.hpp  landmark_block.hpp  problem_vo.hpp  timer.hpp  utility.hpp  vertex.hpp
L18-vio-project/Project BASolver/rootBA/src/: benchmark_rootba.cpp  test_rootba.cpp
L18-vio-project/hw18/: hw18.md
L2/hw2/: hw2.md
L2/hw2/solve_equation/: CMakeLists.txt  solve_equation.cpp
L2/hw2/use_CXX11/: CMakeLists.txt  use_cpp11.cc
L2/hw2/use_Geometry/: CMakeLists.txt  use_geometry.cc
L3/hw3/: hw3.md
L3/hw3/draw_trajectory/: CMakeLists.txt  draw_trajectory.cpp
L3/hw3/error_estimate/: CMakeLists.txt  error_estimate.cpp
L4/code/: fisheye.cpp
L4/hw4/: hw4.md
L4/hw4/fisheye_undistort/: CMakeLists.txt  fisheye.cpp
L4/hw4/image_undistort/: CMakeLists.txt  undistort_image.cpp
L4/hw4/optimization/: CMakeLists.txt  gaussnewton.cpp
L4/hw4/stereo/: CMakeLists.txt  disparity.cpp
L5/code/: E2Rt.cpp  GN-BA.cpp  computeORB.cpp
L5/hw5/: hw5.md
L5/hw5/E2Rt/: CMakeLists.txt  E2Rt.cpp
L5/hw5/GN_BA/: CMakeLists.txt  GN-BA.cpp
L5/hw5/ICP/: CMakeLists.txt  ICP.cpp
L5/hw5/compute_ORB/: CMakeLists.txt  computeORB.cpp
L6/direct_method/: CMakeLists.txt  calc_disparity.cpp  direct_method.cpp
L6/hw6/: hw6.md
L6/optical_flow/: CMakeLists.txt  optical_flow.cpp
L7/ch9/: CMakeLists.txt  SnavelyReprojectionError.h  bundle_adjustment_ceres.cpp  common.cpp  rotation.h
L7/hw7/: hw7.md
L7/hw7/BA_g2o/: CMakeLists.txt  common.cpp  common.h
L7/hw7/directBA/: CMakeLists.txt  directBA.cpp
L8-slam-project/ch13/: CMakeLists.txt
L8-slam-project/ch13/app/: run_kitti_stereo.cpp
L8-slam-project/ch13/config/: default.yaml
L8-slam-project/ch13/include/myslam/: algorithm.h  config.h
L8-slam-project/ch13/src/: visual_odometry.cpp
L8-slam-project/evaluation/00/: stereo_odometry_00.txt
L8-slam-project/hw8/: hw8-stereo-viual-odometry.md
L8-slam-project/stereo-odometry/: CMakeLists.txt  stereo_odometry.cpp
L8-slam-project/stereo-odometry/include/myslam/: dataset.h  frontend.h  map.h
L8-slam-project/stereo-odometry/src/: System.h  backend.cpp  frontend.cpp  map.cpp  viewer.cpp
L8-slam-project/stereo-slam/: CMakeLists.txt
L8-slam-project/夏威龙-第8章作业/stereo-odometry/include/myslam/: backend.h  visual_odometry.h
L8-slam-project/夏威龙-第8章作业/stereo-odometry/src/: config.cpp
docs/: 李群李代数在视觉SLAM中的应用.md
